# dolphinscheduler-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/development/: architecture.md  codegen.md  live-testing.md  release.md  roadmap.md  tooling.md
docs/reference/: cli-contract.md  domain-model.md  error-model.md  future-capabilities.md
docs/user/: commands.md  configuration.md  installation.md  runtime.md  version-compatibility.md  workflow-authoring.md
src/dsctl/: __main__.py  app.py  auth.py  cli_runtime.py  cli_surface.py  client.py  config.py  context.py  errors.py  output.py  output_formats.py  versioning.py
src/dsctl/commands/: access_token.py  alert_group.py  alert_plugin.py  audit.py  capabilities.py  cluster.py  datasource.py  doctor.py  enums.py  env.py  lint.py  meta.py  monitor.py  namespace.py  project.py  project_parameter.py  project_preference.py  project_worker_group.py  queue.py  registry.py  resource.py  schedule.py  schema.py  task.py  task_group.py  task_instance.py  task_type.py  template.py  tenant.py  use.py  user.py  worker_group.py  workflow.py  workflow_instance.py
src/dsctl/models/: __init__.py  common.py  task_spec.py  workflow_patch.py  workflow_spec.py
src/dsctl/services/: _data_shapes.py  _parameter_warnings.py  _resolver_kernel.py  _resolver_models.py  _runtime_defaults.py  _runtime_support.py  _schedule_support.py  _schema_groups_context.py  _schema_groups_design.py  _schema_groups_governance.py  _schema_groups_meta.py  _schema_groups_runtime.py  _schema_primitives.py  _serialization.py  _surface_metadata.py  _task_settings.py  _task_templates.py  _validation.py  _workflow_compile.py  _workflow_digest.py  _workflow_identity.py  _workflow_instance_digest.py  _workflow_mutation.py  _workflow_patch.py  _workflow_render.py  _workflow_validation.py  access_token.py  alert_group.py  alert_plugin.py  audit.py  capabilities.py  cluster.py  confirmation.py  datasource.py  datasource_payload.py  doctor.py  enums.py  env.py  lint.py  meta.py  (+28 more)
src/dsctl/support/: __init__.py  ds_code.py  json_types.py  quartz.py  yaml_io.py
src/dsctl/upstream/: __init__.py  datasource_contracts.py  enums.py  protocol.py  registry.py  runtime_enums.py  task_types.py
tests/: fakes.py  support.py  test_cli_runtime.py  test_context.py  test_errors.py  test_output.py  test_source_governance.py
tests/client/: test_client.py
tests/codegen/: test_ds_codegen_extract_inference.py  test_ds_codegen_extract_type_lookup.py  test_ds_codegen_java_source.py  test_ds_contract.py  test_ds_version_diff.py
tests/commands/: __init__.py  test_access_token.py  test_alert_group.py  test_alert_plugin.py  test_app_surface.py  test_audit.py  test_capabilities.py  test_cluster.py  test_datasource.py  test_doctor.py  test_enum.py  test_env.py  test_lint.py  test_meta.py  test_monitor.py  test_namespace.py  test_project.py  test_project_parameter.py  test_project_preference.py  test_project_worker_group.py  test_queue.py  test_resource.py  test_schedule.py  test_schema.py  test_task.py  test_task_group.py  test_task_instance.py  test_task_type.py  test_template.py  test_tenant.py  test_use.py  test_user.py  test_worker_group.py  test_workflow.py  test_workflow_instance.py
tests/config/: test_config.py
tests/live/: conftest.py  support.py  test_admin_surfaces.py  test_governance_optional_surfaces.py  test_governance_surfaces.py  test_preflight.py  test_project_surfaces.py  test_runtime_control_surfaces.py  test_runtime_surfaces.py  test_schedule_surfaces.py  test_workflow_lineage_surfaces.py  test_workflow_runtime_surfaces.py  workflow_support.py
tests/models/: test_task_spec.py  test_workflow_patch.py  test_workflow_spec.py
tests/packaging/: test_pyproject_metadata.py
tests/services/: test_access_token.py  test_alert_group.py  test_alert_plugin.py  test_audit.py  test_capabilities.py  test_cluster.py  test_datasource.py  test_doctor.py  test_enums.py  test_env.py  test_governance_surface.py  test_lint.py  test_monitor.py  test_namespace.py  test_pagination.py  test_parameter_warnings.py  test_project.py  test_project_parameter.py  test_project_preference.py  test_project_worker_group.py  test_queue.py  test_resolver.py  test_resource.py  test_runtime.py  test_runtime_defaults.py  test_schedule.py  test_schema.py  test_surface_quality.py  test_task.py  test_task_group.py  test_task_instance.py  test_task_type.py  test_template.py  test_tenant.py  test_use.py  test_user.py  test_validation.py  test_worker_group.py  test_workflow.py  test_workflow_instance.py  (+3 more)
tests/tools/: test_audit_dsctl_error_translation.py  test_check_error_translation_governance.py  test_check_package_contents.py  test_check_quality_gate.py  test_extract_ds_api_error_inventory.py  test_extract_dsctl_error_translation_matrix.py  test_live_command_coverage.py  test_live_support.py
tests/upstream/: __init__.py  test_ds_3_4_1.py  test_enums.py  test_registry.py  test_task_types.py
tools/: analyze_ds_version_diff.py  audit_dsctl_error_translation.py  check_error_translation_governance.py  check_explicit_object.py  check_generated_freshness.py  check_package_contents.py  check_project_layout.py  check_quality_gate.py  error_translation_allowlist.txt  explicit_object_allowlist.txt  explicit_object_debt.txt  extract_ds_api_error_inventory.py  extract_dsctl_error_translation_matrix.py  generate_ds_contract.py
tools/ds_codegen/: __init__.py  analysis.py  api.py  ir.py  java_literals.py  java_source.py  runtime.py  source.py  version_diff.py
tools/ds_codegen/extract/: __init__.py  class_creator_inference.py  controller_contract.py  expression_inference.py  generated_view_support.py  inference_support.py  local_inference.py  metadata.py  operation_inference.py  pipeline.py  return_type_resolution.py  service_inference.py  structure_inference.py  type_extraction.py  type_lookup.py
tools/ds_codegen/render/: __init__.py  adapter.py  registry.py  requests_client.py  (+1 more)
(+11 files in other folders)
